each sketch gets its own directory.

--- a/one/index.html
+++ b/one/index.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <script src="js/three.js"></script>
-        <script src="js/test_three.js"></script>
+        <script src="../js/three.js"></script>
+        <script src="test_three.js"></script>
     </body>
 </html>
